# ProteinCrowding

./: .gitignore  CITATION.cff  FH_crowding_synergy.py  README.md  check_deltas.py  fh_crowding_project_plan.md  find_ui_strings.py  fix.py  fix_deltas.py  fix_strings.py  fix_warnings.py  fix_width.py  pyproject.toml  requirements.txt  scratch_fix_app_preview.py  scratch_nan_curve_fit.py  scratch_shape.py  scratch_test_import.py  scratch_test_init.py  scratch_test_memory.py  scratch_test_ternary_memory.py
app/: app.py  citation.py  data_validation.py  export.py  session_io.py  styles.py  validation.py
app/sample_data/: aq16_gly_tre_ternary_format1_TdS.csv  aq16_gly_tre_ternary_format1_dG.csv  aq16_gly_tre_ternary_format1_dH.csv  aq16_gly_tre_ternary_format2_TdS_matrix.csv  aq16_gly_tre_ternary_format2_dG_matrix.csv  aq16_gly_tre_ternary_format2_dH_matrix.csv  aq16_glycerol_binary_format1.csv  aq16_glycerol_binary_format2_TdS.csv  aq16_glycerol_binary_format2_dG.csv  aq16_tmao_binary_format1.csv  (+54 more)
tests/: __init__.py  test_binary_model_smoke.py  test_data_validation.py  test_fitting_smoke.py  test_imports.py  test_sample_data_loads.py  test_session_serialization.py  test_ternary_model_smoke.py
tutorials/: 00_getting_started.ipynb  01_binary_plug_and_play_simulation.ipynb  01b_binary_plots_showcase.ipynb  02_binary_fit_experimental_data.ipynb  03_ternary_plug_and_play_simulation.ipynb  03b_ternary_plots_showcase.ipynb  04_ternary_fit_experimental_data.ipynb  05_parameter_sensitivity_and_interpretation.ipynb  06_exporting_results_and_figures.ipynb  executed_00.ipynb
(+8 files in other folders)
